app/assets/stylesheets/static.scss
// Place all the styles related to the Static controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.pure-white-texture {
  background-color: #FFF;
  color: #333;
  background-image: none;
}

.white-texture {
  background-color: #FFF;
  background-image: asset-url('static/shattered.png');
  color: #333;
}

.green-texture {
  background-color: #FFF;
  background-image: asset-url('static/green_dust_scratch.png');
  color: #333;
}

.call-to-action {
  background-color: #4cae4c;
  color: #FFF;
  background-image: none;
}

.btn-call-to-action {
  border-radius: 40px;
  min-width: 200px;
  max-width: 500px;
  width: 100%;
  color: #4cae4c !important;
  border-color: #4cae4c !important;
  background-color: white !important;
  -webkit-transition: all .4s ease; /* Fade to color for Chrome and Safari */
  -webkit-backface-visibility: hidden; /* Fix for transition flickering */
}

.btn-call-to-action:hover,
.btn-call-to-action:focus,
.btn-call-to-action:active,
.btn-call-to-action.active,
.btn-call-to-action.disabled,
.btn-call-to-action[disabled] {
  color: #fff !important;
  background-color: rgb(255, 157, 107) !important; // #337ab7 !important; // #47a447 !important;
  border-color: rgb(255, 133, 71) !important; // #398439 !important;
}

.math-texture {
  background-color: #FFF;
  background-image: asset-url('static/old_mathematics_no_border.png');
  background-repeat: repeat;
  color: #333;
  background-position: initial;
  background-size: initial;
  -ms-behavior: initial;
}

.transparent-texture, .transparent-light-texture {
  background-color: transparent;
  background-image: none;
}

.transparent-light-texture {
  color: #333;
}

.black-texture {
  background-image: asset-url('static/shattered-dark.png');
  background-size: 350px;
  background-repeat: repeat;
  color: white;

  a {
    color: #4cae4c;
  }
  a:hover,
  a:focus,
  a:active,
  a.active,
  a.disabled,
  a[disabled] {
    color: rgb(255, 157, 107);
  }
}

.anchor-top {
  position: relative;
  top:-50px;
  display: block;
  height: 0;
  width:0;
}

a.anchor-link::before {
  font-family: 'Glyphicons Halflings';
  content: "\e144"; // glyphicon-link
  font-size: 12px;
}

@media screen and (min-width: $screen-sm-min) {
  a.anchor-link::before {
    font-size: 24px;
  }
}

.img-faded-border {
  -webkit-border-radius: 15px;
     -moz-border-radius: 15px;
          border-radius: 15px;
  border-color: #dedede;
  border: 5px solid rgba(255, 255, 255, 0.4);
}

.logo-middle {
  text-align: center;
  margin-top: 80px;
}

.img-white-background {
   -webkit-border-radius: 15px;
     -moz-border-radius: 15px;
          border-radius: 15px;
  background-color: #FFF;
  border-color: #FFF;
  border: 5px solid rgba(255, 255, 255, 0.4);
  padding: 40px;
}

.img-logo-navigation-bar {
  margin-top: 40px;
  margin-right: 20px;
  text-align: center;
}

.img-logo-navigation-bar img {
  max-width: 100%;
}

@media screen and (min-width: $screen-md-min) {
  .md-fixed-height {
    height: 800px;
  }
}

